--- a/src/global.css
+++ b/src/global.css
@@ -33,12 +33,69 @@ table {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-right: 10px;
+    width: 10%;
+    margin-left: 12%;
   }
-  
+  .next-btn{
+    margin-left: 10%;
+  }
   .prev-btn:disabled,
   .next-btn:disabled {
     background-color: #ccc;
     cursor: not-allowed;
   }
-  
+
+  .active{
+    color: yellow;
+  }
+  .filters{
+    margin-left: 25%;
+    margin-top: 3%;
+   font-size: 25px;
+  }
+  .searchInput{
+    width: 24%;
+    height: 5vh;
+    border-radius: 10px;
+
+  }
+  #select_country{
+    margin-left:11%;
+    width: 25%;
+    height: 5vh;
+    border-radius: 10px;
+  }
+  #Display_table{
+    margin-top: 3%;
+    width: 60vw;
+    margin-left: 25%;
+  }
+  #Display_table th{
+   text-align: center;
+  }
+#star_button{
+margin-left: 30%;
+width: 40%;
+}
+#fav_li{
+  width: 20%;
+  border: 1px solid black;
+  list-style: none;
+  padding: .5%;
+}
+#fav_ul{
+  margin-top: -28%;
+  margin-left: 2%;
+}
+  #delete_ico{
+   margin-left: 90%;
+  } 
+
+  #FavTitle{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left: 95px;
+  }
+
+  input::placeholder{
+padding-left: 60px;
+  }
